--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
        <ion-menu-toggle>
         <ion-item lines="none" href="mailto:manugodfrey8@gmail.com">
            <ion-icon  name="mail" slot="start"></ion-icon>
-           manugodfrey@gmail.com
+           support@heba-beta.com
           </ion-item>
      </ion-menu-toggle>
       </ion-content>
