--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -9,8 +9,8 @@
 </ion-header>
 
 <ion-content padding>
-<p class="text-center">
-<ion-title class="text-center">1</ion-title>
+<p  class="ion-text-center">
+<ion-title class="ion-text-center">1</ion-title>
   Hymn Content
 </p>
 </ion-content>
