--- a/src/app/pages/hymn0001/hymn0001.page.html
+++ b/src/app/pages/hymn0001/hymn0001.page.html
@@ -5,13 +5,13 @@
       <ion-back-button defaultHref="/tabs"></ion-back-button>
     </ion-buttons>
     <ion-title>0001.The God of Abraham praise!</ion-title>
-    <ion-buttons slot="end" padding>
+    <!-- <ion-buttons slot="end" padding>
       <ion-icon name="star-outline"></ion-icon>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding >
+<ion-content padding>
 <div class="ion-text-center">
   <p>
     <ion-title>1</ion-title>
