--- a/src/app/pages/help/help.page.html
+++ b/src/app/pages/help/help.page.html
@@ -9,8 +9,10 @@
 </ion-header>
 
 <ion-content padding>
-<p class="text-center">
-<ion-title class="text-center">1</ion-title>
- Guide
-</p>
+<div  class="ion-text-center">
+  <p>
+    <ion-title  class="ion-text-center">1</ion-title>
+     Guide
+    </p>
+</div>
 </ion-content>
