--- a/src/app/pages/hymn0001/hymn0001.page.scss
+++ b/src/app/pages/hymn0001/hymn0001.page.scss
@@ -1,8 +1,9 @@
- .p{
-    font-family: Arial;
-    font-size: 12px;
-}
 
 ion-icon {
     font-size: 25px;
   }  
+
+  ion-content{
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14;
+  }
