--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -24,7 +24,7 @@
    <ion-list>
      <ion-item *ngFor="let item of items" [routerLink]="item.url" routerDirection="root"> 
        <ion-text color="violet">{{item.id}}</ion-text>
-       <ion-icon color="violet" name="musical-notes"></ion-icon>
+       <ion-icon class="note" name="musical-notes"></ion-icon>
       <h5 class="title">{{item.title}}</h5>
      </ion-item>
    </ion-list>
