--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -4,9 +4,16 @@
 ion-text{
   color:violet
 }
+ion-icon {
+  font-size: 25px;
+  
+} 
 .search{
 margin-right: 1rem;
-font-size: 20px;
+font-size: 23px;
+}
+.note{
+  color:purple;
 }
 
 
